--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         <header class="navsection">
             <nav class="navigation">
                 <a class="logo"  href=""><span class="logospecial">Web</span>Studio</a>
-                <ul class="listnav" >
+                <ul class="list listnav" >
                     <li class="li_nav"><a class="linknav"  href="./index.html">Студия</a></li>
                     <li class="li_nav"><a class="linknav"  href="./portfolio.html">Портфолио</a></li>
                     <li class="li_nav"><a class="linknav"  href="">Контакты</a></li>
                 </ul>
             </nav>
-            <ul class="list" >
-                <li><a class="linkadress"  href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="linkadress"  href="tel:+380961111111">+380961111111</a></li>
+            <ul class="list list_addres_header" >
+                <li class="li_adress_header"><a class="linkadress"  href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="li_adress_header"><a class="linkadress"  href="tel:+380961111111">+380961111111</a></li>
             </ul>
         </header>
         <section class="sectionh1">
@@ -34,7 +34,7 @@
         <!-- плюсы компании -->
         <section class="section_about">
             <h2 hidden="true">Достоинства</h2>
-            <ul class="listplusy" >
+            <ul class="list listplusy" >
                 <li class="liplusy">
                     <h3 class="c">Внимание к деталям</h3>
                     <p class="d">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -54,11 +54,11 @@
             </ul>
         </div>
         <!-- Чем мы занимаемся -->
-        <section>
+        <section class="ulimg_whatwedo">
             <h2 class="b1">
                 Чем мы занимаемся
             </h2>
-            <ul class="list_whatwedo" >
+            <ul class="list list_whatwedo" >
                 <li class="li_image"><img src="./images/f1.jpg" alt="coding" Width="370" height="294"></li>
                 <li class="li_image"><img src="./images/f2.jpg" alt="optimizing" Width="370" height="294"></li>
                 <li class="li_image"><img src="./images/f3.jpg" alt="disining" Width="370" height="294"></li>
@@ -66,7 +66,7 @@
         </section>
         <section class="sectionteam">
             <h2 class="b2">Наша команда</h2>
-            <ul class="listteam" >
+            <ul class="list listteam" >
                 <li class="e">
                     <div class="imgbord">
                         <img src="./images/d1.jpg" alt="Игорь Демьяненко" width="270" height="260">
@@ -100,7 +100,7 @@
         <footer class="section_footer">
             <a class="logofooter"  href=""><span class="logospecial">Web</span>Studio</a>
             <address class="addressfooter"><a class="linkadressfooter" href="">г. Киев, пр-т Леси Украинки, 26</a></address>
-            <ul class="list_addres_footer" >
+            <ul class="list list_addres_footer" >
                 <li class="footer_li "><a class="linkfooter"  href="mailto:info@example.com">info@example.com</a></li>
                 <li class="footer_li "><a class="linkfooter"  href="tel:+380991111111">+380991111111</a></li>
             </ul>
