--- a/portfolio.html
+++ b/portfolio.html
@@ -20,73 +20,73 @@
                     <li class="li_nav"><a class="linknav" href="">Контакты</a></li>
                 </ul>
             </nav>
-            <ul class="list">
-                <li><a class="linkadress" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="linkadress" href="tel:+380961111111">+380961111111</a></li>
+            <ul class="list list_addres_header">
+                <li class="li_adress_header"><a class="linkadress" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="li_adress_header"><a class="linkadress" href="tel:+380961111111">+380961111111</a></li>
             </ul>
         </header>
         <section>
             <h2 hidden="true">Примеры работ</h2>
             <ul class="list_portfolio_button">
-                <li><button class="button_portfolio" class="button">Все</button></li>
-                <li><button class="button_portfolio" class="button">Веб-сайты</button></li>
-                <li><button class="button_portfolio" class="button">Приложения</button></li>
-                <li><button class="button_portfolio" class="button">Дизайн</button></li>
-                <li><button class="button_portfolio" class="button">Маркетинг</button></li>
+                <li class="li_button"><button class="button_portfolio" type="button">Все</button></li>
+                <li class="li_button"><button class="button_portfolio" type="button">Веб-сайты</button></li>
+                <li class="li_button"><button class="button_portfolio" type="button">Приложения</button></li>
+                <li class="li_button"><button class="button_portfolio" type="button">Дизайн</button></li>
+                <li class="li_button"><button class="button_portfolio" type="button">Маркетинг</button></li>
             </ul>
             <ul class="listimgportfolio">
-                <li>
-                    <img src="./images/1p.jpg" alt="технокряк">
+                <li class="img_li_portfolio">
+                    <img width = 370px height = 294px  src="./images/1p.jpg" alt="технокряк">
                     <div>
                         <h3 class="portfolio">Технокряк</h3>
-                        <p>Веб-сайт</p>
+                        <p class = "portfolio" >Веб-сайт</p>
                     </div>
                 </li>
-                <li>
-                    <img src="./images/2p.jpg" alt="Постер">
+                <li class="img_li_portfolio">
+                    <img width = 370px height = 294px  src="./images/2p.jpg" alt="Постер">
                     <div>
                         <h3 class="portfolio">Постер New Orlean vs Golden Star</h3>
-                        <p>Дизайн</p>
+                        <p class = "portfolio" >Дизайн</p>
                     </div>
                 </li>
-                <li>
-                    <img src="./images/3p.jpg" alt="лого ресторана">
+                <li class="img_li_portfolio">
+                    <img width = 370px height = 294px  src="./images/3p.jpg" alt="лого ресторана">
                     <div>
                         <h3 class="portfolio">Ресторан Seafood</h3>
-                        <p>Приложение</p>
+                        <p class = "portfolio" >Приложение</p>
                     </div>
                 </li>
-                <li>
-                    <img src="./images/4p.jpg" alt="лого">
+                <li class="img_li_portfolio">
+                    <img width = 370px height = 294px  src="./images/4p.jpg" alt="лого">
                     <div>
                         <h3 class="portfolio">Проект Prime</h3>
-                        <p>Маркетинг</p>
+                        <p class = "portfolio" >Маркетинг</p>
                     </div>
                 </li>
-                <li>
-                    <img src="./images/5p.jpg" alt="лого">
+                <li class="img_li_portfolio">
+                    <img width = 370px height = 294px  src="./images/5p.jpg" alt="лого">
                     <h3 class="portfolio">Проект Boxes</h3>
-                    <p>Приложение</p>
+                    <p class = "portfolio" >Приложение</p>
                 </li>
-                <li>
-                    <img src="./images/6p.jpg" alt="вид сайта">
+                <li class="img_li_portfolio">
+                    <img width = 370px height = 294px  src="./images/6p.jpg" alt="вид сайта">
                     <h3 class="portfolio">Inspiration has no Borders</h3>
-                    <p>Веб-сайт</p>
+                    <p class = "portfolio" >Веб-сайт</p>
                 </li>
-                <li>
-                    <img src="./images/7p.jpg" alt="открытые страницы книги">
+                <li class="img_li_portfolio">
+                    <img width = 370px height = 294px  src="./images/7p.jpg" alt="открытые страницы книги">
                     <h3 class="portfolio">Издание Limited Edition</h3>
-                    <p>Дизайн</p>
+                    <p class = "portfolio" >Дизайн</p>
                 </li>
-                <li>
-                    <img src="./images/8p.jpg" alt="бирка проекта">
+                <li class="img_li_portfolio">
+                    <img width = 370px height = 294px  src="./images/8p.jpg" alt="бирка проекта">
                     <h3 class="portfolio">Проект LAB</h3>
-                    <p>Маркетинг</p>
+                    <p class = "portfolio" >Маркетинг</p>
                 </li>
-                <li>
-                    <img src="./images/9p.jpg" alt="главная страинца">
+                <li class="img_li_portfolio">
+                    <img width = 370px height = 294px  src="./images/9p.jpg" alt="главная страинца">
                     <h3 class="portfolio">Growing Business</h3>
-                    <p>Приложение</p>
+                    <p class = "portfolio" >Приложение</p>
                 </li>
             </ul>
         </section>
