--- a/portfolio.html
+++ b/portfolio.html
@@ -37,56 +37,66 @@
             <ul class="listimgportfolio">
                 <li class="img_li_portfolio">
                     <img width = 370px height = 294px  src="./images/1p.jpg" alt="технокряк">
-                    <div>
+                    <div class="border_img_portfolio">
                         <h3 class="portfolio">Технокряк</h3>
                         <p class = "portfolio" >Веб-сайт</p>
                     </div>
                 </li>
                 <li class="img_li_portfolio">
                     <img width = 370px height = 294px  src="./images/2p.jpg" alt="Постер">
-                    <div>
+                    <div class="border_img_portfolio">
                         <h3 class="portfolio">Постер New Orlean vs Golden Star</h3>
                         <p class = "portfolio" >Дизайн</p>
                     </div>
                 </li>
                 <li class="img_li_portfolio">
                     <img width = 370px height = 294px  src="./images/3p.jpg" alt="лого ресторана">
-                    <div>
+                    <div class="border_img_portfolio">
                         <h3 class="portfolio">Ресторан Seafood</h3>
                         <p class = "portfolio" >Приложение</p>
                     </div>
                 </li>
                 <li class="img_li_portfolio">
                     <img width = 370px height = 294px  src="./images/4p.jpg" alt="лого">
-                    <div>
+                    <div class="border_img_portfolio">
                         <h3 class="portfolio">Проект Prime</h3>
                         <p class = "portfolio" >Маркетинг</p>
                     </div>
                 </li>
                 <li class="img_li_portfolio">
                     <img width = 370px height = 294px  src="./images/5p.jpg" alt="лого">
-                    <h3 class="portfolio">Проект Boxes</h3>
-                    <p class = "portfolio" >Приложение</p>
+                    <div class="border_img_portfolio">
+                        <h3 class="portfolio">Проект Boxes</h3>
+                        <p class = "portfolio" >Приложение</p>
+                    </div>
                 </li>
                 <li class="img_li_portfolio">
                     <img width = 370px height = 294px  src="./images/6p.jpg" alt="вид сайта">
-                    <h3 class="portfolio">Inspiration has no Borders</h3>
-                    <p class = "portfolio" >Веб-сайт</p>
-                </li>
+                    <div class="border_img_portfolio">
+                        <h3 class="portfolio">Inspiration has no Borders</h3>
+                        <p class = "portfolio" >Веб-сайт</p>
+                    </div>
+                    </li>
                 <li class="img_li_portfolio">
                     <img width = 370px height = 294px  src="./images/7p.jpg" alt="открытые страницы книги">
-                    <h3 class="portfolio">Издание Limited Edition</h3>
-                    <p class = "portfolio" >Дизайн</p>
+                    <div class="border_img_portfolio">
+                        <h3 class="portfolio">Издание Limited Edition</h3>
+                        <p class = "portfolio" >Дизайн</p>
+                    </div>
                 </li>
                 <li class="img_li_portfolio">
                     <img width = 370px height = 294px  src="./images/8p.jpg" alt="бирка проекта">
-                    <h3 class="portfolio">Проект LAB</h3>
-                    <p class = "portfolio" >Маркетинг</p>
+                    <div class="border_img_portfolio">
+                        <h3 class="portfolio">Проект LAB</h3>
+                        <p class = "portfolio" >Маркетинг</p>
+                    </div>
                 </li>
                 <li class="img_li_portfolio">
                     <img width = 370px height = 294px  src="./images/9p.jpg" alt="главная страинца">
-                    <h3 class="portfolio">Growing Business</h3>
-                    <p class = "portfolio" >Приложение</p>
+                    <div class="border_img_portfolio">
+                        <h3 class="portfolio">Growing Business</h3>
+                        <p class = "portfolio" >Приложение</p>
+                    </div>
                 </li>
             </ul>
         </section>
