--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </section>
         <!-- плюсы компании -->
         <section class="section_about">
-            <h2 hidden="true">Достоинства</h2>
+            <h2 class="hiddenh2">Достоинства</h2>
             <ul class="list listplusy" >
                 <li class="liplusy">
                     <h3 class="c">Внимание к деталям</h3>
