--- a/portfolio.html
+++ b/portfolio.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
@@ -26,7 +27,7 @@
             </ul>
         </header>
         <section>
-            <h2 hidden="true">Примеры работ</h2>
+            <h2 class="hiddenh2">Примеры работ</h2>
             <ul class="list_portfolio_button">
                 <li class="li_button"><button class="button_portfolio" type="button">Все</button></li>
                 <li class="li_button"><button class="button_portfolio" type="button">Веб-сайты</button></li>
